--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '2.1'
+version: '3.3'
 
 services:
-  mai-db-node-ex01:
+  db-node-1:
     build:
-      context: mariadb
+      context: mysql
       dockerfile: Dockerfile
-    container_name: mai-db-node-ex01
+    container_name: db-node-1
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: stud
@@ -19,15 +19,79 @@ services:
     networks:
       - arch-network
     ports:
-      - "3336:3306"
-    expose:
-      - "3336"
+      - 3360:3306
+    volumes:
+      - db-node-1-data:/var/lib/mysql
+
+  db-node-2:
+    build:
+      context: mysql
+      dockerfile: Dockerfile
+    container_name: db-node-2
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: stud
+      MYSQL_USER: stud
+      MYSQL_PASSWORD: helloworld
+      MYSQL_ROOT_PASSWORD: '1'
+    command: >
+      --sql-mode='STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION'
+      --general-log=ON
+      --log-queries-not-using-indexes=ON
+    networks:
+      - arch-network
+    ports:
+      - 3361:3306
+    volumes:
+      - db-node-2-data:/var/lib/mysql
+
+  db-node-3:
+    build:
+      context: mysql
+      dockerfile: Dockerfile
+    container_name: db-node-3
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: stud
+      MYSQL_USER: stud
+      MYSQL_PASSWORD: helloworld
+      MYSQL_ROOT_PASSWORD: '1'
+    command: >
+      --sql-mode='STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION'
+      --general-log=ON
+      --log-queries-not-using-indexes=ON
+    networks:
+      - arch-network
+    ports:
+      - 3362:3306
+    volumes:
+      - db-node-3-data:/var/lib/mysql
+
+  proxysql:
+    build:
+      context: proxysql
+      dockerfile: Dockerfile
+    container_name: proxysql
+    command: >
+      --initial
+    volumes:
+      - proxysql-data:/var/lib/proxysql
     healthcheck:
       test: "/usr/bin/mysql --user=stud --password=helloworld --execute \"SHOW DATABASES;\""
       timeout: 20s
       retries: 5
-    volumes:
-      - db-node-ex01-data:/var/lib/mysql
+    depends_on:
+      - db-node-1
+      - db-node-2
+      - db-node-3
+
+    networks:
+      - arch-network
+    ports:
+      # Mysql Client Port
+      - "6033:6033"
+      # Mysql Admin Port
+      - "6032:6032"
 
   userservice:
     build:
@@ -36,19 +100,21 @@ services:
     container_name: userservice
     environment:
       - DB_HOST=mai-db-node-ex01
-      - DB_PORT=3306
+      - DB_PORT=6033
       - DB_LOGIN=stud
       - DB_PASSWORD=helloworld
       - DB_DATABASE=stud
     ports:
-      - "3000:3000"
+      - "4000:4000"
     expose:
-      - "3000"
+      - "4000"
     networks:
       - arch-network
     depends_on:
-      mai-db-node-ex01:
-        condition: service_healthy
+      - proxysql
+      - db-node-1
+      - db-node-2
+      - db-node-3
 
 
   chatservice:
@@ -58,43 +124,49 @@ services:
     container_name: chatservice
     environment:
       - DB_HOST=mai-db-node-ex01
-      - DB_PORT=3306
+      - DB_PORT=6033
       - DB_LOGIN=stud
       - DB_PASSWORD=helloworld
       - DB_DATABASE=stud
     ports:
-      - "3001:3001"
+      - "4001:4001"
     expose:
-      - "3001"
+      - "4001"
     networks:
       - arch-network
     depends_on:
-      mai-db-node-ex01:
-        condition: service_healthy
+      - proxysql
+      - db-node-1
+      - db-node-2
+      - db-node-3
 
   wallservice:
-      build:
-        context: wall_server
-        dockerfile: DockerWall
-      container_name: wallservice
-      environment:
-        - DB_HOST=mai-db-node-ex01
-        - DB_PORT=3306
-        - DB_LOGIN=stud
-        - DB_PASSWORD=helloworld
-        - DB_DATABASE=stud
-      ports:
-        - "3002:3002"
-      expose:
-        - "3002"
-      networks:
-        - arch-network
-      depends_on:
-        mai-db-node-ex01:
-          condition: service_healthy
-
+    build:
+      context: wall_server
+      dockerfile: DockerWall
+    container_name: wallservice
+    environment:
+      - DB_HOST=mai-db-node-ex01
+      - DB_PORT=6033
+      - DB_LOGIN=stud
+      - DB_PASSWORD=helloworld
+      - DB_DATABASE=stud
+    ports:
+      - "4002:4002"
+    expose:
+      - "4002"
+    networks:
+      - arch-network
+    depends_on:
+      - proxysql
+      - db-node-1
+      - db-node-2
+      - db-node-3
 volumes:
-  db-node-ex01-data:
+  db-node-1-data:
+  db-node-2-data:
+  db-node-3-data:
+  proxysql-data:
 
 networks:
   arch-network:
