--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     container_name: db-node-1
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: stud
+      MYSQL_DATABASE: archdb
       MYSQL_USER: stud
-      MYSQL_PASSWORD: helloworld
+      MYSQL_PASSWORD: stud
       MYSQL_ROOT_PASSWORD: '1'
     command: >
       --sql-mode='STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION'
@@ -30,9 +30,9 @@ services:
     container_name: db-node-2
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: stud
+      MYSQL_DATABASE: archdb
       MYSQL_USER: stud
-      MYSQL_PASSWORD: helloworld
+      MYSQL_PASSWORD: stud
       MYSQL_ROOT_PASSWORD: '1'
     command: >
       --sql-mode='STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION'
@@ -52,9 +52,9 @@ services:
     container_name: db-node-3
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: stud
+      MYSQL_DATABASE: archdb
       MYSQL_USER: stud
-      MYSQL_PASSWORD: helloworld
+      MYSQL_PASSWORD: stud
       MYSQL_ROOT_PASSWORD: '1'
     command: >
       --sql-mode='STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION'
@@ -77,7 +77,7 @@ services:
     volumes:
       - proxysql-data:/var/lib/proxysql
     healthcheck:
-      test: "/usr/bin/mysql --user=stud --password=helloworld --execute \"SHOW DATABASES;\""
+      test: "/usr/bin/mysql --user=stud --password=stud --execute \"SHOW DATABASES;\""
       timeout: 20s
       retries: 5
     depends_on:
@@ -93,21 +93,19 @@ services:
       # Mysql Admin Port
       - "6032:6032"
 
-  userservice:
+  my_service:
     build:
-      context: user_server
-      dockerfile: DockerUser
-    container_name: userservice
+      context: my_service
+      dockerfile: Dockerfile
+    container_name: my_service
     environment:
-      - DB_HOST=mai-db-node-ex01
+      - DB_HOST=proxysql
       - DB_PORT=6033
       - DB_LOGIN=stud
       - DB_PASSWORD=helloworld
       - DB_DATABASE=stud
     ports:
-      - "4000:4000"
-    expose:
-      - "4000"
+      - 8080:8080
     networks:
       - arch-network
     depends_on:
@@ -115,53 +113,9 @@ services:
       - db-node-1
       - db-node-2
       - db-node-3
+      # proxysql:
+      #   condition: service_healthy
 
-
-  chatservice:
-    build:
-      context: chat_server
-      dockerfile: DockerChat
-    container_name: chatservice
-    environment:
-      - DB_HOST=mai-db-node-ex01
-      - DB_PORT=6033
-      - DB_LOGIN=stud
-      - DB_PASSWORD=helloworld
-      - DB_DATABASE=stud
-    ports:
-      - "4001:4001"
-    expose:
-      - "4001"
-    networks:
-      - arch-network
-    depends_on:
-      - proxysql
-      - db-node-1
-      - db-node-2
-      - db-node-3
-
-  wallservice:
-    build:
-      context: wall_server
-      dockerfile: DockerWall
-    container_name: wallservice
-    environment:
-      - DB_HOST=mai-db-node-ex01
-      - DB_PORT=6033
-      - DB_LOGIN=stud
-      - DB_PASSWORD=helloworld
-      - DB_DATABASE=stud
-    ports:
-      - "4002:4002"
-    expose:
-      - "4002"
-    networks:
-      - arch-network
-    depends_on:
-      - proxysql
-      - db-node-1
-      - db-node-2
-      - db-node-3
 volumes:
   db-node-1-data:
   db-node-2-data:
