--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -93,6 +93,17 @@ services:
       # Mysql Admin Port
       - "6032:6032"
 
+  cache:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning
+    networks:
+      - arch-network
+    volumes:
+      - cache:/data
+
   my_service:
     build:
       context: my_service
@@ -104,6 +115,7 @@ services:
       - DB_LOGIN=stud
       - DB_PASSWORD=stud
       - DB_DATABASE=archdb
+      - CACHE=cache:6379
     ports:
       - 8082:8080
     expose:
@@ -112,17 +124,17 @@ services:
       - arch-network
     depends_on:
       - proxysql
+      - cache
       - db-node-1
       - db-node-2
       - db-node-3
-      # proxysql:
-      #   condition: service_healthy
 
 volumes:
   db-node-1-data:
   db-node-2-data:
   db-node-3-data:
   proxysql-data:
+  cache:
 
 networks:
   arch-network:
